test modification for demo purposes

--- a/html/myProject1.html
+++ b/html/myProject1.html
@@ -126,7 +126,7 @@ button:active
 <input id="input" type="text" placeholder="Enter the length...">	
 <button> Confirm </button>
 <script type="text/javascript">
-
+// Just a test modification to demonstrate how to add, commit and push changes
 var input = document.querySelector("#input");
 var output = document.querySelector("#output");
 
